packages/parser/test/parser/E0105.txt
a := test(a, ,)
===== err =====
anonymous:1:13: ParseError: E0105 - Expected call expression argument
1 | a := test(a, ,)
  |             ^
